--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: python
-python: '3.6'
-install: pip3 install .
-script: python3 -m unittest
+python:
+  - '3.6'
+install:
+  - pip3 install -e .
+before_script:
+  - pip install coveralls
+script:
+  - coverage run -m unittest
+after_success:
+  - coveralls
