Added biopython to test prereqs

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
 install:
   - pip3 install -e .
 before_script:
-  - pip install coveralls
+  - pip3 install coveralls
+  - pip3 install biopython
 script:
   - coverage run -m unittest
 after_success:
